# libsnow

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: check-releases.yml  generate-db.yml
libsnow-helper/: Cargo.toml
libsnow-helper/data/: libsnow-helper.service.in  org.snowflakeos.LibSnow.Helper1.conf  org.snowflakeos.LibSnow.Helper1.service.in  org.snowflakeos.LibSnow.UserHelper1.service.in  org.snowflakeos.libsnow.policy
libsnow-helper/src/: dbus.rs  main.rs  operations.rs
modules/home/libsnow/: default.nix
modules/nixos/libsnow/: default.nix
nix/modules/: home.nix  nixos.nix
nix/shells/: ci.nix  default.nix
scripts/: generate-and-upload.sh
shells/libsnow/: default.nix
src/: dbus.rs  lib.rs  main.rs
src/config/: configfile.rs
src/homemanager/: batch.rs  install.rs  list.rs  mod.rs  rebuild.rs  remove.rs  update.rs
src/metadata/: database.rs  mod.rs  revision.rs  search.rs
src/nixenv/: install.rs  list.rs  mod.rs  remove.rs  update.rs
src/nixos/: batch.rs  install.rs  list.rs  mod.rs  rebuild.rs  remove.rs  update.rs
src/profile/: install.rs  list.rs  mod.rs  remove.rs  run.rs  update.rs
src/toml/: mod.rs
src/utils/: misc.rs  mod.rs  storedb.rs
