[package]
name = "libsnow"
version = "0.0.2-alpha.1"
edition = "2024"
license = "MIT"
description = "An opinionated library for interacting with the Nix package manager"
repository = "https://github.com/snowfallorg/libsnow"
readme = "README.md"
include = ["src/*", "Cargo.toml", "LICENSE*", "README.md"]
keywords = ["nix", "nixos", "snowflakeos"]

[[bin]]
name = "generate-db"
path = "src/bin/generate_db.rs"

[dependencies]
nix-editor = "0.3.0"
reqwest = { version = "0.13", features = ["json", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.5"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
log = "0.4"
lazy_static = "1.5"
brotli = "8.0"
rusqlite = "0.38"
quick-xml = { version = "0.39", features = ["serialize"] }
rayon = "1.11"
tantivy = { version = "0.25", features = ["mmap"] }
toml = "0.9"
