[package]
name = "libsnow"
version = "0.0.2-alpha.1"
edition = "2024"
license = "MIT"
description = "An opinionated library for interacting with the Nix package manager"
repository = "https://github.com/snowfallorg/libsnow"
readme = "README.md"
include = ["src/*", "Cargo.toml", "LICENSE*", "README.md"]
keywords = ["nix", "nixos", "snowflakeos"]

[[bin]]
name = "generate-db"
path = "src/bin/generate_db.rs"
required-features = ["generate-db"]

[features]
generate-db = ["dep:clap", "dep:quick-xml", "dep:tracing-subscriber", "dep:regex", "dep:anyhow"]

[dependencies]
nix-editor = "0.3.0"
reqwest = { version = "0.13", features = ["json", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", optional = true }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.6", features = ["derive"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
zbus = "5.14"
dirs = "6.0"
rusqlite = "0.39"
quick-xml = { version = "0.39", features = ["serialize"], optional = true }
tantivy = { version = "0.25", features = ["mmap"] }
toml = "1.1"
regex = { version = "1", optional = true }
