[package]
name = "libsnow-helper"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
users = "0.11"
anyhow = "1.0"
signal-hook = "0.4"
libc = "0.2"
zbus = "5.14"
zbus_polkit = "5.0"
async-io = "2.6"
async-channel = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"

[[bin]]
name = "libsnow-helper"
path = "src/main.rs"
